radio buttons visibility issue fixed on electron app

--- a/src/app/components/navbar/windows/windows.component.scss
+++ b/src/app/components/navbar/windows/windows.component.scss
@@ -47,18 +47,6 @@
   }
 }
 
-::ng-deep .electron {
-  .workspace {
-    .ant-radio {
-      display: none;
-    }
-
-    .icon-popup {
-      display: none;
-    }
-  }
-}
-
 .ant-divider-horizontal {
   margin-top: 8px;
   margin-bottom: 4px;
